backend frontend developed and dockerized